[package]
name = "wikipedia_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend"], version = "0.11"}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structstruck = "0.3.0"
log = "0.4.6"
serde-xml-rs = "0.6.0"
